# pkgcraft-bash-old

./: README.md  meson.build
.github/workflows/: ci.yml
include/: README
scripts/: build
src/: has.c  hasv.c  meson.build  profile.c  utils.c  utils.h  ver_cut.c  ver_rs.c  ver_test.c
